# keeper

./: README.md  read.txt  xs.sln
Release/: WindowsService.conf  install.cmd  uninstall.cmd
xm/: CMakeLists.txt  fun.hpp  json_db.cpp  json_db.h  win32.hpp  win32_process.hpp  win32_service.hpp  xm.cpp  xm.vcxproj  xm.vcxproj.filters
